# BranchAndBound

./: CMakeLists.txt  SimpleBranchAndBound.c  constants.h  heuristics.c  main.c  structures.h  utils.c  utils.h
Algorithms/: BoundsCalculation.c  ParallelBranchAndBound.c  SimpleBranchAndBound.c  SimpleBranchAndBound_wLinkedStack.c  SimpleBranchandBound_wDynamicStack.c  algorithms.h  heuristics.c
DataStructures/: ConstantSizeStack.c  DynamicStack.c  LinkedStack.c  definitions.h  structs.h  structures.h
InputOutput/: InputOutput.c  InputOutput.h
Plotting/: PathPlot.py  solution.py
tsp_data/: ag21.tsp  ag22.tsp  gd14.tsp  gg14.tsp  gg15.tsp  gg16.tsp  gg17.tsp  gg18.tsp  gg19.tsp  gg20.tsp  gg21.tsp  gg22.tsp  gg23.tsp  gg25.tsp  gg27.tsp  gg30.tsp  gg32.tsp  gg35.tsp  gg37.tsp  gg40.tsp  sp11.tsp  uk12.tsp
